# cpp-coursera

./: README.md
cpp-red-belt/week_1/bad_macro/: CMakeLists.txt
cpp-red-belt/week_1/comp_generator/: test_runner.h
cpp-red-belt/week_1/intro_to_macro/bad_macro/: main.cpp
cpp-red-belt/week_1/intro_to_macro/comp_generator/: CMakeLists.txt  airline_ticket.h  main.cpp
cpp-red-belt/week_1/intro_to_macro/logger/: CMakeLists.txt  test_runner.h
cpp-red-belt/week_1/intro_to_macro/max_elm_predicate/: CMakeLists.txt  main.cpp
cpp-red-belt/week_1/intro_to_macro/update_field_macro/: airline_ticket.h  update_field.cpp
cpp-red-belt/week_1/logger/: logger.cpp
cpp-red-belt/week_1/max_elm_predicate/: test_runner.h
cpp-red-belt/week_1/max_uniq_id/: CMakeLists.txt  main.cpp
cpp-red-belt/week_1/template_classes/deque_with_two_vecs/: CMakeLists.txt  main.cpp
cpp-red-belt/week_1/template_classes/paginator/: CMakeLists.txt
cpp-red-belt/week_1/template_classes/table/: CMakeLists.txt  main.cpp
cpp-red-belt/week_1/update_field_macro/: CMakeLists.txt
cpp-red-belt/week_2/optimisations_code_principles/sort_students_by_rating/: CMakeLists.txt  profile.h  sort_students.cpp  student.h
cpp-white-belt/week_1/A_+_B/: main.cpp
cpp-white-belt/week_1/conditional_operator_and_loops/binary_digits/: main.cpp
cpp-white-belt/week_1/conditional_operator_and_loops/count_cost_of_goods/: main.cpp
cpp-white-belt/week_1/conditional_operator_and_loops/division/: main.cpp
cpp-white-belt/week_1/conditional_operator_and_loops/even_numbers/: main.cpp
cpp-white-belt/week_1/conditional_operator_and_loops/gcd/: main.cpp
cpp-white-belt/week_1/conditional_operator_and_loops/second_enter_in_str/: main.cpp
cpp-white-belt/week_1/operations/equation/: main.cpp
cpp-white-belt/week_1/operations/min_str/: main.cpp
cpp-white-belt/week_2/functions/factorial/: main.cpp
cpp-white-belt/week_2/functions/is_palindrom/: main.cpp
cpp-white-belt/week_2/functions/maximizer/: main.cpp
cpp-white-belt/week_2/functions/move_strings/: main.cpp
cpp-white-belt/week_2/functions/palindromFilter/: main.cpp
cpp-white-belt/week_2/functions/reverse_sequence/: main.cpp
cpp-white-belt/week_2/functions/reverse_sequence_2/: a.out  main.cpp
cpp-white-belt/week_2/map/anagrams/: main.cpp
cpp-white-belt/week_2/map/bus_stops_1/: CMakeLists.txt  main.cpp
cpp-white-belt/week_2/map/bus_stops_2/: CMakeLists.txt  main.cpp
cpp-white-belt/week_2/map/capitals_handbook/: CMakeLists.txt  main.cpp
cpp-white-belt/week_2/set/build_map_values_set/: CMakeLists.txt  build_map_values_set.cpp  build_map_values_set.h  main.cpp
cpp-white-belt/week_2/set/bus_stop_3/: CMakeLists.txt  main.cpp
cpp-white-belt/week_2/set/synonyms/: CMakeLists.txt  main.cpp
cpp-white-belt/week_2/set/unique_str/: CMakeLists.txt  main.cpp
cpp-white-belt/week_2/vector/average_temp/: main.cpp
cpp-white-belt/week_2/vector/monthly_business/: main.cpp
cpp-white-belt/week_2/vector/queue/: main.cpp
cpp-white-belt/week_3/algorithms/sort_case_insensitive_str/: CMakeLists.txt  main.cpp
cpp-white-belt/week_5/db_final/: CMakeLists.txt  main.cpp
cpp-yellow-belt/week_1/matrix/: CMakeLists.txt  main.cpp
cpp-yellow-belt/week_1/templates/ref_on_element/: CMakeLists.txt  main.cpp
cpp-yellow-belt/week_1/tuples_and_pairs/regions_database/: CMakeLists.txt  main.cpp
cpp-yellow-belt/week_1/tuples_and_pairs/tasks_tracker/: CMakeLists.txt  main.cpp
cpp-yellow-belt/week_2/unit_test_finals/test_GetDistinctRealRootCount/: CMakeLists.txt  main.cpp
cpp-yellow-belt/week_2/unit_test_finals/test_Rational/: CMakeLists.txt  main.cpp
cpp-yellow-belt/week_2/unit_test_finals/test_isPalindrom/: CMakeLists.txt  main.cpp
cpp-yellow-belt/week_2/unit_test_finals/test_names_and_surnames/: CMakeLists.txt  main.cpp
cpp-yellow-belt/week_2/using_unit_test_for_debug/program_decomposition/: CMakeLists.txt  main.cpp
cpp-yellow-belt/week_3/multi_file_projects/functions_in_header_file/: CMakeLists.txt  main.cpp  sum_reverse_sort.cpp
cpp-yellow-belt/week_3/multi_file_projects/phone_number/: CMakeLists.txt  main.cpp  phone_number.cpp
cpp-yellow-belt/week_3/multi_file_projects/program_decomposition_2/: CMakeLists.txt  bus_manager.cpp  bus_manager.h  main.cpp  query.cpp  query.h  responses.cpp  responses.h
cpp-yellow-belt/week_3/multi_file_projects/rectangle/: CMakeLists.txt  main.cpp  rectangle.cpp  rectangle.h
cpp-yellow-belt/week_4/introduction_to_iterators/find_greater_elm/: CMakeLists.txt  find_greater_elements.h  main.cpp
cpp-yellow-belt/week_4/introduction_to_iterators/split_into_words/: CMakeLists.txt  main.cpp  split_into_words.cpp  split_into_words.h
cpp-yellow-belt/week_4/introduction_to_iterators/vector_part/: CMakeLists.txt  main.cpp  vector_part.cpp  vector_part.h
cpp-yellow-belt/week_4/queue_deque_searching_algorithms/arithmetic_expr_1/: CMakeLists.txt  main.cpp
cpp-yellow-belt/week_4/queue_deque_searching_algorithms/arithmetic_expr_2/: CMakeLists.txt  main.cpp
cpp-yellow-belt/week_4/queue_deque_searching_algorithms/find_nearest_element/: CMakeLists.txt  find_nearest_element.cpp  main.cpp
cpp-yellow-belt/week_4/queue_deque_searching_algorithms/find_starts_with_char/: CMakeLists.txt  find_starts_with.h  main.cpp
cpp-yellow-belt/week_4/queue_deque_searching_algorithms/find_starts_with_string/: CMakeLists.txt  find_starts_with.h  main.cpp
cpp-yellow-belt/week_4/queue_deque_searching_algorithms/names_and_surnames_4/: CMakeLists.txt  main.cpp  person.cpp  person.h
cpp-yellow-belt/week_4/using_iterators_in_algorithms_and_containers/dedup/: CMakeLists.txt  main.cpp  remove_duplicates.h
cpp-yellow-belt/week_4/using_iterators_in_algorithms_and_containers/demographic_data/: CMakeLists.txt  compute_median_age.h  main.cpp  person.h  print_stats.cpp  print_stats.h
cpp-yellow-belt/week_6/final/: CMakeLists.txt  condition_parser.cpp  condition_parser.h  condition_parser_test.cpp  database.cpp  database.h  date.cpp  date.h  helpers.h  main.cpp  node.cpp  node.h  test_db.h  test_runner.h  token.cpp  token.h
(+85 files in other folders)
